Add constructors and data classes for Question, Course, and CourseOffering; update examRepo methods and implement lecturerController for exam retrieval