@@ -3,12 +3,16 @@ package com.auto.exam.service;
 import com.auto.exam.Model.CourseRegister;
 import com.auto.exam.Model.Exam;
 import com.auto.exam.Model.ExamRequest;
+import com.auto.exam.Model.MarkQuestions;
+import com.auto.exam.Model.ProvideQuestion;
+import com.auto.exam.Model.SendingExam;
 import com.auto.exam.Model.Student;
 import com.auto.exam.Model.User;
 import com.auto.exam.Model.UserPrincipal;
 import com.auto.exam.repo.courseRegisterRepo;
 import com.auto.exam.repo.examRepo;
 import com.auto.exam.repo.userRepo;
+import com.auto.exam.repo.questionRepo;
 
 import org.springframework.security.core.Authentication;
 
@@ -44,8 +48,7 @@ public class examService {
         this.studentDetailsService = studentDetailsService;
     }
     
-
-    public List<Exam> getExamsUsingDate(ExamRequest request){
+    public List<SendingExam> getExamsUsingDateAndLecture(ExamRequest request){
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();        
 
@@ -58,10 +61,32 @@ public class examService {
         }
         SimpleDateFormat outputFormat = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm");
         String user_name = userPrincipal.getUsername();
-        List<Exam> exams = examRepo.findExamByUser(user_name);
-        return exams.stream().filter(exam -> exam.getStartDateTime().toString().equals(outputFormat.format(date))).toList();
-
+        List<Exam> exams = examRepo.findLectureExamByUser(user_name);
+        List<Exam> return_exams=exams.stream().filter(exam -> exam.getStartDateTime().toString().equals(outputFormat.format(date))).toList();
+        List<SendingExam> sendingExams = return_exams.stream().map(exam -> new SendingExam(exam.getExamId(), exam.getStartDateTime(), exam.getDuration(), exam.getPassingCriteria(), exam.getType(), exam.getTotalMarks(), exam.getCourseOffering().getCourse().getCourseId(), exam.getCourseOffering().getCourse().getCourseName(), exam.getCourseOffering().getCourse().getCourseCode())).collect(Collectors.toList());
+        return sendingExams;
     }
+    
+
+    public List<SendingExam> getExamsUsingDateAndStudent(ExamRequest request){
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();        
+
+        Date date;
+        try {
+            SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+            date = formatter.parse(request.getDate());
+        } catch (ParseException e) {
+            return null;
+        }
+        SimpleDateFormat outputFormat = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm");
+        String user_name = userPrincipal.getUsername();
+        List<Exam> exams = examRepo.findStudentExamByUser(user_name);
+        List<Exam> return_exams=exams.stream().filter(exam -> exam.getStartDateTime().toString().equals(outputFormat.format(date))).toList();
+        List<SendingExam> sendingExams = return_exams.stream().map(exam -> new SendingExam(exam.getExamId(), exam.getStartDateTime(), exam.getDuration(), exam.getPassingCriteria(), exam.getType(), exam.getTotalMarks(), exam.getCourseOffering().getCourse().getCourseId(), exam.getCourseOffering().getCourse().getCourseName(), exam.getCourseOffering().getCourse().getCourseCode())).collect(Collectors.toList());
+        return sendingExams;
+    }
+
     public List<ProvideQuestion> getQuestions(long examID) {
 
      /*   Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
@@ -75,6 +100,7 @@ public class examService {
                 .map(q -> new ProvideQuestion(q.getQuestionId(), q.getQuestion(), q.getMarks()))
                 .collect(Collectors.toList());
     }
+
     @Transactional
     public List<MarkQuestions> markQuestions(List<MarkQuestions> markQuestions) {
         for (MarkQuestions question : markQuestions) {
